# Nova-Forge-Expeditions

./: .dockerignore  .gitignore  AUDIT.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Makefile  NovaForge Design ideas.rtf  README.md  ROADMAP.md  build.sh  run.sh  setup.sh
cpp_common/: CMakeLists.txt
engine/: AtlasEngineConfig.cmake.in  CMakeLists.txt
engine/abi/: ABICapsule.cpp  ABICapsule.h  ABIRegistry.cpp  ABIRegistry.h
engine/ai/: AIAssetDecisionFramework.cpp  AIAssetDecisionFramework.h  AIMemory.cpp  AIMemory.h  AISignalRegistry.cpp  AISignalRegistry.h  AtlasAICore.cpp  AtlasAICore.h  BehaviorGraph.cpp  BehaviorGraph.h  BehaviorNodes.cpp  BehaviorNodes.h  DiplomacyIntent.h  FactionRouter.cpp  FactionRouter.h  LLMBackend.cpp  LLMBackend.h  Personality.h  ProceduralGenerator.cpp  ProceduralGenerator.h  ProjectContext.cpp  ProjectContext.h  RelationshipModel.cpp  RelationshipModel.h  WebAggregationKB.cpp  WebAggregationKB.h
engine/animation/: AnimationGraph.cpp  AnimationGraph.h  AnimationNodes.cpp  AnimationNodes.h  CharacterAnimationController.cpp  CharacterAnimationController.h  DeterministicAnimationGraph.cpp  DeterministicAnimationGraph.h
engine/asset_graph/: AssetGraph.h  AssetGraphExecutor.cpp  AssetGraphExecutor.h  DamageState.h
engine/assets/: AssetBinary.cpp  AssetBinary.h  AssetCategoryRegistry.cpp  AssetCategoryRegistry.h  AssetFormat.h  AssetImporter.cpp  AssetImporter.h  AssetRegistry.cpp  AssetRegistry.h  AssetSerializer.h  AssetValidator.cpp  AssetValidator.h  DependencyGraph.cpp  DependencyGraph.h  HttpClient.cpp  HttpClient.h  MarketplaceImporter.cpp  MarketplaceImporter.h  ServerAssetValidator.cpp  ServerAssetValidator.h  SocketHttpClient.cpp  SocketHttpClient.h
engine/audio/: AudioEngine.cpp  AudioEngine.h
engine/bootstrap/: RuntimeBootstrap.cpp  RuntimeBootstrap.h
engine/character/: CharacterGraph.cpp  CharacterGraph.h  CharacterNodes.cpp  CharacterNodes.h  HumanMeshGenerator.cpp  HumanMeshGenerator.h
engine/cmake/: AtlasContractEnforcement.cmake  check_include_firewall.cmake
engine/command/: CommandHistory.cpp  CommandHistory.h
engine/conversation/: ConversationGraph.cpp  ConversationGraph.h  ConversationNodes.h
engine/core/: CrashHandler.cpp  CrashHandler.h  DeterministicAllocator.cpp  DeterministicAllocator.h  Engine.cpp  Engine.h  EnginePhase.h  EventBus.cpp  EventBus.h  GameStateManager.h  Logger.cpp  Logger.h  PermissionManager.cpp  PermissionManager.h  RuntimeBootstrap.h
engine/ecs/: BuiltinComponents.h  ComponentCategory.h  ECS.cpp  ECS.h
engine/flow/: FlowGraphCodegen.h  FlowGraphDebugger.cpp  FlowGraphDebugger.h  FlowGraphIR.cpp  FlowGraphIR.h  FlowGraphRefactorer.cpp  FlowGraphRefactorer.h  GameFlowGraph.cpp  GameFlowGraph.h  GameFlowNodes.cpp  GameFlowNodes.h
engine/gameplay/: MechanicAsset.cpp  MechanicAsset.h  SkillTree.cpp  SkillTree.h
engine/graphvm/: CollaborativeEditor.cpp  CollaborativeEditor.h  GraphCache.cpp  GraphCache.h  GraphCompiler.cpp  GraphCompiler.h  GraphIR.h  GraphSerializer.cpp  GraphSerializer.h  GraphVM.cpp  GraphVM.h
engine/interaction/: Intent.h  IntentResolver.h  Interaction.cpp  Interaction.h  InteractionRouter.h  InteractionSystem.cpp  InteractionSystem.h  RuleIntentResolver.cpp  RuleIntentResolver.h  Utterance.h  VoiceAdapter.h
engine/mod/: ModAssetRegistry.cpp  ModAssetRegistry.h  ModLoader.cpp  ModLoader.h
engine/module/: IGameModule.h  ModuleLoader.cpp  ModuleLoader.h
engine/net/: LagCompensation.cpp  LagCompensation.h  NetContext.cpp  NetContext.h  NetHardening.cpp  NetHardening.h  NetworkInterpolationBuffer.cpp  NetworkInterpolationBuffer.h  QoSScheduler.cpp  QoSScheduler.h  Replication.cpp  Replication.h
engine/platform/: PlatformWindow.h  Win32Window.cpp  Win32Window.h  X11Window.cpp  X11Window.h
engine/plugin/: PluginSystem.cpp  PluginSystem.h
engine/procedural/: BuildQueue.cpp  BuildQueue.h  ConstraintSolver.cpp  ConstraintSolver.h  DeterministicRNG.cpp  DeterministicRNG.h  HullMeshGenerator.cpp  HullMeshGenerator.h  InteriorNode.cpp  InteriorNode.h  LODBakingGraph.cpp  LODBakingGraph.h  LODBakingNodes.cpp  LODBakingNodes.h  ModuleScaling.h  ModuleTier.cpp  ModuleTier.h  PCGDomain.h  PCGManager.cpp  PCGManager.h  PCGVerify.cpp  PCGVerify.h  PlanetaryBase.cpp  PlanetaryBase.h  ProceduralMaterialGraph.cpp  ProceduralMaterialGraph.h  ProceduralMaterialNodes.cpp  ProceduralMaterialNodes.h  ProceduralMeshGraph.cpp  ProceduralMeshGraph.h  ProceduralMeshNodes.cpp  ProceduralMeshNodes.h  ShipHullGraph.cpp  ShipHullGraph.h  ShipHullNodes.cpp  ShipHullNodes.h
engine/production/: AssetCooker.cpp  AssetCooker.h  BuildAuditLog.cpp  BuildAuditLog.h  BuildManifest.cpp  BuildManifest.h  BuildProfile.cpp  BuildProfile.h  CertifiedBuild.cpp  CertifiedBuild.h  GamePackager.cpp  GamePackager.h  PlatformTarget.cpp  PlatformTarget.h
engine/project/: ProjectManager.cpp  ProjectManager.h
engine/render/: AtlasShaderIR.cpp  AtlasShaderIR.h  EditorViewportFramebuffer.h  GBuffer.cpp  GBuffer.h  GLRenderer.cpp  GLRenderer.h  GLViewportFramebuffer.cpp  GLViewportFramebuffer.h  InstancedRenderer.cpp  (+18 more)
tests/: CMakeLists.txt  main.cpp  test_ai_decision_framework.cpp  test_ai_diff_viewer.cpp  test_ai_memory.cpp  test_ai_signals.cpp  test_animation.cpp  test_arena2d_module.cpp  test_asset.cpp  test_asset_assistant.cpp  test_asset_browser.cpp  test_asset_category_registry.cpp  test_asset_cooker.cpp  test_asset_diff_commit.cpp  test_asset_graph.cpp  test_atlas_ai_core.cpp  test_atlas_assistant_panel.cpp  test_atlas_gameplay.cpp  test_atlas_ui.cpp  test_audio.cpp  test_behaviorgraph.cpp  test_build_manifest.cpp  test_build_profile.cpp  test_camera.cpp  test_certified_build.cpp  test_character.cpp  test_character_viewer.cpp  test_ci_dashboard.cpp  test_collaborative_editor.cpp  test_command.cpp  test_compiler.cpp  test_component_category.cpp  test_components.cpp  test_console.cpp  test_conversation.cpp  test_crash_handler.cpp  test_crash_reporter.cpp  test_create_atlas_project.py  test_cross_platform_save.cpp  test_det_animation.cpp  (+172 more)
tileeditor/: CMakeLists.txt  main.cpp
(+965 files in other folders)
