add_executable(AtlasTests
    main.cpp
    test_graphvm.cpp
    test_ecs.cpp
    test_components.cpp
    test_component_category.cpp
    test_asset.cpp
    test_marketplace_importer.cpp
    test_net.cpp
    test_net_queue.cpp
    test_world.cpp
    test_compiler.cpp
    test_engine.cpp
    test_console.cpp
    test_terrain.cpp
    test_noise.cpp
    test_streaming.cpp
    test_galaxy.cpp
    test_interaction.cpp
    test_interaction_graph.cpp
    test_diplomacy.cpp
    test_asset_graph.cpp
    test_mod.cpp
    test_editor_assistant.cpp
    test_input.cpp
    test_camera.cpp
    test_physics.cpp
    test_audio.cpp
    test_gameplay.cpp
    test_skill.cpp
    test_weapon.cpp
    test_character.cpp
    test_animation.cpp
    test_tile.cpp
    test_sound.cpp
    test_ui_screen.cpp
    test_flow.cpp
    test_flow_ir.cpp
    test_flow_codegen.cpp
    test_flow_debugger.cpp
    test_shader_ir.cpp
    test_build_manifest.cpp
    test_story.cpp
    test_project.cpp
    test_command.cpp
    test_worldgraph.cpp
    test_voice.cpp
    test_plugin.cpp
    test_heightfield.cpp
    test_strategygraph.cpp
    test_server_rules.cpp
    test_conversation.cpp
    test_ai_signals.cpp
    test_ai_memory.cpp
    test_relationship.cpp
    test_behaviorgraph.cpp
    test_graph_serializer.cpp
    test_uigraph.cpp
    test_schema_validator.cpp
    test_graph_cache.cpp
    test_ecs_serialization.cpp
    test_snapshot.cpp
    test_ecs_inspector.cpp
    test_replication.cpp
    test_asset_browser.cpp
    test_asset_cooker.cpp
    test_graph_editor.cpp
    test_asset_assistant.cpp
    test_build_profile.cpp
    test_mod_loader.cpp
    test_platform_target.cpp
    test_profiler_panel.cpp
    test_replay_recorder.cpp
    test_visual_diff.cpp
    test_crash_handler.cpp
    test_logger.cpp
    test_net_inspector.cpp
    test_game_packager.cpp
    test_game_module.cpp
    test_atlas_gameplay.cpp
    test_eveoffline_module.cpp
    test_arena2d_module.cpp
    test_ui_command_bus.cpp
    test_ui_manager.cpp
    test_ui_layout_solver.cpp
    test_ui_nodes_extended.cpp
    test_state_hasher.cpp
    test_replay_divergence.cpp
    test_deterministic_allocator.cpp
    test_permission_manager.cpp
    test_hud_overlay.cpp
    test_replay_timeline_panel.cpp
    test_render.cpp
    test_time_model.cpp
    test_world_state.cpp
    test_save_system.cpp
    test_engine_integration.cpp
    test_next_tasks.cpp
    test_next_tasks_phase2.cpp
    test_gui_dsl_parser.cpp
    test_gui_input_recorder.cpp
    test_headless_gui.cpp
    test_job_tracer.cpp
    test_include_firewall.cpp
    test_next_steps.cpp
    test_golden_replays.cpp
    test_enforcement.cpp
    test_lockdown_phase2.cpp
    test_lockdown_phase3.cpp
    test_gui_completion.cpp
    test_tlc_model_checker.cpp
    test_proof_viewer.cpp
    test_replay_proof_exporter.cpp
    test_ci_dashboard.cpp
    test_procedural_mesh.cpp
    test_procedural_material.cpp
    test_lod_baking.cpp
    test_ui_logic_graph.cpp
    test_det_animation.cpp
    test_collaborative_editor.cpp
    test_atlas_ai_core.cpp
    test_atlas_assistant_panel.cpp
    test_ai_diff_viewer.cpp
    test_flow_refactorer.cpp
    test_web_aggregation_kb.cpp
    test_game_gui_asset.cpp
    test_widget_dsl.cpp
    test_game_gui_binding.cpp
    test_game_mechanics_ui.cpp
    test_determinism_versioning.cpp
    test_certified_build.cpp
    test_font_bootstrap.cpp
    test_diagnostics_overlay.cpp
    test_event_router.cpp
    test_draw_list.cpp
    test_engine_phase.cpp
    test_launcher_screen.cpp
    test_tile_editor.cpp
    test_text_renderer.cpp
    test_ai_decision_framework.cpp
    test_game_packager_build.cpp
    test_layout_persistence.cpp
    test_net_hardening.cpp
    test_net_improvements.cpp
    test_play_in_editor.cpp
    test_engine_input_routing.cpp
    test_world_state_serializer.cpp
    test_asset_category_registry.cpp
    test_replay_versioning.cpp
    test_next_tasks_phase3.cpp
    test_mesh_viewer.cpp
    test_material_editor.cpp
    test_prefab_editor.cpp
    test_truth_ui_panel.cpp
    test_asset_diff_commit.cpp
    test_cross_platform_save.cpp
    test_scroll_state.cpp
    test_ui_manager_viewport.cpp
    test_truth_ui_draw.cpp
    test_ui_style.cpp
    test_ui_scene_graph.cpp
    test_tile_chunk_builder.cpp
    test_tile_palette_panel.cpp
    test_rule_graph_editor.cpp
    test_next_tasks_phase4.cpp
    test_panel_draw.cpp
    test_next_tasks_phase5.cpp
    test_next_tasks_phase6.cpp
    test_next_tasks_phase7.cpp
    test_next_tasks_phase8.cpp
    test_next_tasks_phase9.cpp
    test_next_tasks_phase10.cpp
    test_next_tasks_phase11.cpp
    test_next_tasks_phase12.cpp
    test_next_tasks_phase13.cpp
    test_viewport_framebuffer.cpp
    test_menu_system.cpp
    test_gui_full_completion.cpp
    test_gui_next_tasks.cpp
    test_gui_managers.cpp
    test_gui_next_managers.cpp
    test_crash_reporter.cpp
    test_next_tasks_phase14.cpp
    test_next_tasks_phase15.cpp
    test_next_tasks_phase16.cpp
    test_panel_draw_impl.cpp
    test_next_tasks_phase17.cpp
    test_next_tasks_phase18.cpp
    test_next_tasks_phase19.cpp
    test_next_tasks_phase20.cpp
    test_editor_ui_fix.cpp
    test_gui_interaction_fix.cpp
    test_gui_new_widgets.cpp
    test_gui_interaction_managers.cpp
    test_menu_overlay_and_system_tab.cpp
    test_menu_actions.cpp
    test_renderer_backend.cpp
    test_script_and_abi.cpp
    test_ship_hull_graph.cpp
    test_ship_editor_panel.cpp
    test_character_viewer.cpp
    test_editor_command_bus.cpp
    ${CMAKE_SOURCE_DIR}/engine/tools/EditorCommandBus.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ConsolePanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/InteractionDebugger.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ECSInspectorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/AssetBrowserPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/WorldGraphPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ProfilerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ReplayTimelinePanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/NetInspectorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/StateHashDiffPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/SaveFileBrowserPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/JobTracePanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ProofViewerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/CIDashboardPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/tools/GamePackagerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/tools/VisualDiff.cpp
    ${CMAKE_SOURCE_DIR}/editor/assistant/EditorAssistant.cpp
    ${CMAKE_SOURCE_DIR}/editor/assistant/AssetGraphAssistant.cpp
    ${CMAKE_SOURCE_DIR}/editor/ui/EditorAttachProtocol.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/AtlasAssistantPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/AIDiffViewerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/GameMechanicsUIPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/ui/EditorLayout.cpp
    ${CMAKE_SOURCE_DIR}/editor/ui/LauncherScreen.cpp
    ${CMAKE_SOURCE_DIR}/editor/tools/TileEditorModule.cpp
    ${CMAKE_SOURCE_DIR}/editor/tools/PlayInEditor.cpp
    ${CMAKE_SOURCE_DIR}/editor/ui/LayoutPersistence.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/TilePalettePanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/RuleGraphEditorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/VoiceCommandPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ProjectPickerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/InteractionDebugPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/QuestEditorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/InventoryEditorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/ai/AIAggregator.cpp
    ${CMAKE_SOURCE_DIR}/editor/ai/TemplateAIBackend.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/MaterialEditorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/MeshViewerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/PrefabEditorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/DesyncVisualizerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/AIDebuggerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ShipEditorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/CharacterEditorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/ui/CharacterSelectScreen.cpp
)

target_link_libraries(AtlasTests AtlasEngine AtlasGameplay EveOfflineModule Arena2DModule)
target_include_directories(AtlasTests PRIVATE ${CMAKE_SOURCE_DIR}/editor)
target_compile_definitions(AtlasTests PRIVATE CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

add_test(NAME AtlasTests COMMAND AtlasTests)
